# rust-template

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  cargo-generate.toml  cliff.toml  clippy.toml  rustfmt.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: build.yml
